src/test/ui/illegal-sized-bound/mutability-mismatch-arg.stderr
error: the `min` method cannot be invoked on a trait object
  --> $DIR/mutability-mismatch-arg.rs:3:9
   |
LL |      *t.min().unwrap()
   |         ^^^
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
   = note: this has a `Sized` requirement
   |
help: you need `&mut dyn Iterator<Item = &u64>` instead of `&dyn Iterator<Item = &u64>`
   |
LL | fn test(t: &mut dyn Iterator<Item=&u64>) -> u64 {
   |             +++

error: aborting due to previous error

